reference/k/snapshots/functions-closure-preserves-captured-value.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-closure-preserves-captured-value.cdz
---
# functions-closure-preserves-captured-value

## Input

```cadenza
let x = 10
fn capture_fn = x
let x = 20
capture_fn
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 99 108 111 115 117 114 101 45 112 114 101 115 101 114 118 101 115 45 99 97 112 116 117 114 101 100 45 118 97 108 117 101 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 10))) (Span (11 29) (Apply (Op 61) (Apply (Ident 102 110) (Ident 99 97 112 116 117 114 101 95 102 110)) (Ident 120))) (Span (29 40) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 20))) (Span (40 50) (Ident 99 97 112 116 117 114 101 95 102 110)))
```

## Expected

```
() : Unit
() : Unit
() : Unit
10 : Integer
```

## K Output

```
<generatedTop>
  <k>
    10 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "capture_fn" |-> closure ( "capture_fn" , .List , ( Ident 120  .Chars ) , "capture_fn" |-> pending ( "capture_fn" )
    "x" |-> 10 )
    "x" |-> 20 )
    1 |-> scope ( 0 , "capture_fn" |-> pending ( "capture_fn" )
    "x" |-> 10 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/functions-closure-preserves-captured-value.cdz"
  </file>
  <span-start>
    40
  </span-start>
  <span-end>
    50
  </span-end>
</generatedTop>
```

