reference/k/snapshots/functions-closure-with-multiple-captures.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-closure-with-multiple-captures.cdz
---
# functions-closure-with-multiple-captures

## Input

```cadenza
let a = 10
let b = 20
fn sum_with_context x = x + a + b
sum_with_context 5
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 99 108 111 115 117 114 101 45 119 105 116 104 45 109 117 108 116 105 112 108 101 45 99 97 112 116 117 114 101 115 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 97)) (Integer 10))) (Span (11 22) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 98)) (Integer 20))) (Span (22 56) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 115 117 109 95 119 105 116 104 95 99 111 110 116 101 120 116)) (Ident 120)) (Apply (Op 43) (Apply (Op 43) (Ident 120) (Ident 97)) (Ident 98)))) (Span (56 74) (Apply (Ident 115 117 109 95 119 105 116 104 95 99 111 110 116 101 120 116) (Integer 5))))
```

## Expected

```
() : Unit
() : Unit
() : Unit
35 : Integer
```

## K Output

```
<generatedTop>
  <k>
    35 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "a" |-> 10
    "b" |-> 20
    "sum_with_context" |-> closure ( "sum_with_context" , ListItem ( "x" ) , ( Apply ( Op 43  .Chars ) ( Apply ( Op 43  .Chars ) ( Ident 120  .Chars )  ( Ident 97  .Chars )  .Exprs )  ( Ident 98  .Chars )  .Exprs ) , "a" |-> 10
    "b" |-> 20
    "sum_with_context" |-> pending ( "sum_with_context" ) ) )
    1 |-> scope ( 0 , "a" |-> 10
    "b" |-> 20
    "sum_with_context" |-> pending ( "sum_with_context" )
    "x" |-> 5 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/functions-closure-with-multiple-captures.cdz"
  </file>
  <span-start>
    56
  </span-start>
  <span-end>
    74
  </span-end>
</generatedTop>
```

