reference/k/snapshots/functions-function-as-argument.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-function-as-argument.cdz
---
# functions-function-as-argument

## Input

```cadenza
fn apply f x = f x
fn double x = x * 2
apply double 5
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 102 117 110 99 116 105 111 110 45 97 115 45 97 114 103 117 109 101 110 116 46 99 100 122) (Span (0 19) (Apply (Op 61) (Apply (Apply (Apply (Ident 102 110) (Ident 97 112 112 108 121)) (Ident 102)) (Ident 120)) (Apply (Ident 102) (Ident 120)))) (Span (19 39) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 100 111 117 98 108 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Integer 2)))) (Span (39 53) (Apply (Apply (Ident 97 112 112 108 121) (Ident 100 111 117 98 108 101)) (Integer 5))))
```

## Expected

```
() : Unit
() : Unit
10 : Integer
```

## K Output

```
<generatedTop>
  <k>
    10 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "apply" |-> closure ( "apply" , ListItem ( "f" )
    ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Ident 120  .Chars )  .Exprs ) , "apply" |-> pending ( "apply" )
    "double" |-> pending ( "double" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "apply" |-> closure ( "apply" , ListItem ( "f" )
    ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Ident 120  .Chars )  .Exprs ) , "apply" |-> pending ( "apply" )
    "double" |-> pending ( "double" ) )
    "double" |-> pending ( "double" ) ) )
    1 |-> scope ( 0 , "apply" |-> pending ( "apply" )
    "double" |-> pending ( "double" )
    "f" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "apply" |-> closure ( "apply" , ListItem ( "f" )
    ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Ident 120  .Chars )  .Exprs ) , "apply" |-> pending ( "apply" )
    "double" |-> pending ( "double" ) )
    "double" |-> pending ( "double" ) )
    "x" |-> 5 )
    2 |-> scope ( 1 , "apply" |-> closure ( "apply" , ListItem ( "f" )
    ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Ident 120  .Chars )  .Exprs ) , "apply" |-> pending ( "apply" )
    "double" |-> pending ( "double" ) )
    "double" |-> pending ( "double" )
    "x" |-> 5 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    3
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/functions-function-as-argument.cdz"
  </file>
  <span-start>
    39
  </span-start>
  <span-end>
    53
  </span-end>
</generatedTop>
```

