reference/k/snapshots/functions-function-as-return-value.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-function-as-return-value.cdz
---
# functions-function-as-return-value

## Input

```cadenza
fn make_adder n =
    fn adder x = x + n
    adder
let add_10 = make_adder 10
add_10 5
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 102 117 110 99 116 105 111 110 45 97 115 45 114 101 116 117 114 110 45 118 97 108 117 101 46 99 100 122) (Span (0 51) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 109 97 107 101 95 97 100 100 101 114)) (Ident 110)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 97 100 100 101 114)) (Ident 120)) (Apply (Op 43) (Ident 120) (Ident 110))) (Ident 97 100 100 101 114)))) (Span (51 78) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 97 100 100 95 49 48)) (Apply (Ident 109 97 107 101 95 97 100 100 101 114) (Integer 10)))) (Span (78 86) (Apply (Ident 97 100 100 95 49 48) (Integer 5))))
```

## Expected

```
() : Unit
() : Unit
15 : Integer
```

## K Output

```
<k>
  15 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "add_10" |-> closure ( "adder" , ListItem ( "x" ) , ( Apply ( Op 43  .Chars ) ( Ident 120  .Chars )  ( Ident 110  .Chars )  .Exprs ) , "adder" |-> pending ( "adder" )
  "make_adder" |-> pending ( "make_adder" )
  "n" |-> 10 )
  "make_adder" |-> closure ( "make_adder" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 97  100  100  101  114  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Op 43  .Chars ) ( Ident 120  .Chars )  ( Ident 110  .Chars )  .Exprs )  .Exprs )  ( Ident 97  100  100  101  114  .Chars )  .Exprs ) , "make_adder" |-> pending ( "make_adder" ) ) )
  1 |-> scope ( 0 , "make_adder" |-> pending ( "make_adder" )
  "n" |-> 10 )
  2 |-> scope ( 1 , "adder" |-> closure ( "adder" , ListItem ( "x" ) , ( Apply ( Op 43  .Chars ) ( Ident 120  .Chars )  ( Ident 110  .Chars )  .Exprs ) , "adder" |-> pending ( "adder" )
  "make_adder" |-> pending ( "make_adder" )
  "n" |-> 10 ) )
  3 |-> scope ( 0 , "adder" |-> pending ( "adder" )
  "make_adder" |-> pending ( "make_adder" )
  "n" |-> 10
  "x" |-> 5 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  4
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/functions-function-as-return-value.cdz"
</file>
<span-start>
  78
</span-start>
<span-end>
  86
</span-end>
```

