reference/k/snapshots/functions-function-composition.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-function-composition.cdz
---
# functions-function-composition

## Input

```cadenza
fn compose f g =
    fn composed x = f (g x)
    composed

fn double x = x * 2
fn square x = x * x
let double_then_square = compose square double

double_then_square 3
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 102 117 110 99 116 105 111 110 45 99 111 109 112 111 115 105 116 105 111 110 46 99 100 122) (Span (0 59) (Apply (Op 61) (Apply (Apply (Apply (Ident 102 110) (Ident 99 111 109 112 111 115 101)) (Ident 102)) (Ident 103)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 99 111 109 112 111 115 101 100)) (Ident 120)) (Apply (Ident 102) (Apply (Ident 103) (Ident 120)))) (Ident 99 111 109 112 111 115 101 100)))) (Span (59 79) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 100 111 117 98 108 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Integer 2)))) (Span (79 99) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 115 113 117 97 114 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Ident 120)))) (Span (99 147) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 100 111 117 98 108 101 95 116 104 101 110 95 115 113 117 97 114 101)) (Apply (Apply (Ident 99 111 109 112 111 115 101) (Ident 115 113 117 97 114 101)) (Ident 100 111 117 98 108 101)))) (Span (147 167) (Apply (Ident 100 111 117 98 108 101 95 116 104 101 110 95 115 113 117 97 114 101) (Integer 3))))
```

## Expected

```
() : Unit
() : Unit
() : Unit
() : Unit
36 : Integer
```

## K Output

```
<generatedTop>
  <k>
    36 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double_then_square" |-> closure ( "composed" , ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs ) , "compose" |-> pending ( "compose" )
    "composed" |-> pending ( "composed" )
    "double" |-> pending ( "double" )
    "f" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    "g" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    "square" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) ) )
    1 |-> scope ( 0 , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "f" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    "g" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    2 |-> scope ( 1 , "composed" |-> closure ( "composed" , ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs ) , "compose" |-> pending ( "compose" )
    "composed" |-> pending ( "composed" )
    "double" |-> pending ( "double" )
    "f" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    "g" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) ) )
    3 |-> scope ( 0 , "compose" |-> pending ( "compose" )
    "composed" |-> pending ( "composed" )
    "double" |-> pending ( "double" )
    "f" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" ) )
    "g" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" )
    "x" |-> 3 )
    4 |-> scope ( 3 , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" )
    "x" |-> 3 )
    5 |-> scope ( 3 , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "compose" |-> closure ( "compose" , ListItem ( "f" )
    ListItem ( "g" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Op 61  .Chars ) ( Apply ( Apply ( Ident 102  110  .Chars ) ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) ( Ident 120  .Chars )  .Exprs )  ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 103  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs )  .Exprs )  ( Ident 99  111  109  112  111  115  101  100  .Chars )  .Exprs ) , "compose" |-> pending ( "compose" )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "double" |-> pending ( "double" )
    "square" |-> pending ( "square" ) )
    "square" |-> pending ( "square" )
    "x" |-> 6 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    6
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-function-composition.cdz"
  </file>
  <span-start>
    147
  </span-start>
  <span-end>
    167
  </span-end>
</generatedTop>
```

