reference/k/snapshots/functions-function-definition-and-call.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-function-definition-and-call.cdz
---
# functions-function-definition-and-call

## Input

```cadenza
fn square x = x * x
square 5
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 102 117 110 99 116 105 111 110 45 100 101 102 105 110 105 116 105 111 110 45 97 110 100 45 99 97 108 108 46 99 100 122) (Span (0 20) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 115 113 117 97 114 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Ident 120)))) (Span (20 28) (Apply (Ident 115 113 117 97 114 101) (Integer 5))))
```

## Expected

```
() : Unit
25 : Integer
```

## K Output

```
<generatedTop>
  <k>
    25 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "square" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "square" |-> pending ( "square" ) ) )
    1 |-> scope ( 0 , "square" |-> pending ( "square" )
    "x" |-> 5 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-function-definition-and-call.cdz"
  </file>
  <span-start>
    20
  </span-start>
  <span-end>
    28
  </span-end>
</generatedTop>
```

