reference/k/snapshots/functions-function-with-expression-body.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-function-with-expression-body.cdz
---
# functions-function-with-expression-body

## Input

```cadenza
fn compute = 10 * 5 + 2
compute
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 102 117 110 99 116 105 111 110 45 119 105 116 104 45 101 120 112 114 101 115 115 105 111 110 45 98 111 100 121 46 99 100 122) (Span (0 24) (Apply (Op 61) (Apply (Ident 102 110) (Ident 99 111 109 112 117 116 101)) (Apply (Op 43) (Apply (Op 42) (Integer 10) (Integer 5)) (Integer 2)))) (Span (24 31) (Ident 99 111 109 112 117 116 101)))
```

## Expected

```
() : Unit
52 : Integer
```

## K Output

```
<k>
  52 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "compute" |-> closure ( "compute" , .List , ( Apply ( Op 43  .Chars ) ( Apply ( Op 42  .Chars ) ( Integer 10 )  ( Integer 5 )  .Exprs )  ( Integer 2 )  .Exprs ) , "compute" |-> pending ( "compute" ) ) )
  1 |-> scope ( 0 , "compute" |-> pending ( "compute" ) )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  2
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/functions-function-with-expression-body.cdz"
</file>
<span-start>
  24
</span-start>
<span-end>
  31
</span-end>
```

